Implemented Team routes
